--- a/Code/pom.xml
+++ b/Code/pom.xml
@@ -14,5 +14,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4</artifactId>
+      <version>4.13.1</version>
+    </dependency>
   </dependencies>
 </project>
